[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "invoker"
version = "0.3.2"
dependencies = ["Click>=8.1.3", "ipython"]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0"
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0"
]
docs = [
    "sphinx>=7.0.0",
    "myst-parser>=2.0.0",
    "sphinx-rtd-theme>=2.0.0"
]

[project.scripts]
invoker = "invoker:cli"

[tool.setuptools]
py-modules = ["invoker", "project", "util", "resource_manager"]

[tool.setuptools.packages.find]
include = ["resources*"]

[tool.setuptools.package-data]
# Include non-.py resource files needed at runtime (e.g. invoker header template).
"resources" = ["_header.txt"]
